2017-09-20  Alberto Garcia  <berto@igalia.com>

        Fix HPPA and Alpha builds
        https://bugs.webkit.org/show_bug.cgi?id=177224

        Reviewed by Alex Christensen.

        * CMakeLists.txt:

2017-09-18  Filip Pizlo  <fpizlo@apple.com>

        ErrorInstance and Exception need destroy methods
        https://bugs.webkit.org/show_bug.cgi?id=177095

        Reviewed by Saam Barati.
        
        When I made ErrorInstance and Exception into JSDestructibleObjects, I forgot to make them
        follow that type's protocol.

        * runtime/ErrorInstance.cpp:
        (JSC::ErrorInstance::destroy): Implement this to fix leaks.
        * runtime/ErrorInstance.h:
        * runtime/Exception.h: Change how this is declared now that this is a DestructibleObject.

2017-09-18  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC] Consider dropping JSObjectSetPrototype feature for JSGlobalObject
        https://bugs.webkit.org/show_bug.cgi?id=177070

        Reviewed by Saam Barati.

        Due to the security reason, our global object is immutable prototype exotic object.
        It prevents users from injecting proxies into the prototype chain of the global object[1].
        But our JSC API does not respect this attribute, and allows users to change [[Prototype]]
        of the global object after instantiating it.

        This patch removes this feature. Once global object is instantiated, we cannot change [[Prototype]]
        of the global object. It drops JSGlobalObject::resetPrototype use, which involves GlobalThis
        edge cases.

        [1]: https://github.com/tc39/ecma262/commit/935dad4283d045bc09c67a259279772d01b3d33d

        * API/JSObjectRef.cpp:
        (JSObjectSetPrototype):
        * API/tests/CustomGlobalObjectClassTest.c:
        (globalObjectSetPrototypeTest):

2017-09-17  Yusuke Suzuki  <utatane.tea@gmail.com>

        [DFG] Remove ToThis more aggressively
        https://bugs.webkit.org/show_bug.cgi?id=177056
