@@ -1023,7 +1023,13 @@ foreach (_sourceFile IN LISTS JavaScriptCore_UNIFIABLE_SOURCES)
     endif ()
 endforeach ()
 
-execute_process(COMMAND ${RUBY_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/../WTF/generate-unified-source-bundles.rb
+if (WIN32 AND INTERNAL_BUILD)
+    set(WTF_SCRIPTS_DIR "${CMAKE_BINARY_DIR}/../include/private/WTF/Scripts")
+else ()
+    set(WTF_SCRIPTS_DIR "${FORWARDING_HEADERS_DIR}/WTF/Scripts")
+endif ()
+
+execute_process(COMMAND ${RUBY_EXECUTABLE} ${WTF_SCRIPTS_DIR}/generate-unified-source-bundles.rb
   "--derived-sources-path" ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR} ${JavaScriptCore_UNIFIABLE_SOURCES}
   RESULT_VARIABLE generateUnifiedSourcesResult
   OUTPUT_VARIABLE generateUnifiedSourcesOutput
